[package]
authors.workspace = true
description = "Shared stuffs for Allfeat runtimes."
edition.workspace = true
name = "shared-runtime"
version.workspace = true

[dependencies]
enumflags2 = { workspace = true }
parity-scale-codec = { workspace = true, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { workspace = true, features = ["derive"] }

polkadot-sdk = { workspace = true, features = [
	"experimental",
	"runtime",
	"pallet-timestamp",
	"pallet-utility",
	"pallet-sudo",
	"pallet-session",
	"pallet-scheduler",
	"pallet-preimage",
	"pallet-proxy",
	"pallet-multisig",
	"pallet-balances",
	"pallet-im-online",
	"pallet-transaction-payment",
	"pallet-identity",
] }

pallet-midds = { workspace = true }

allfeat-primitives = { workspace = true }

[features]
default = ["std"]
std = [
	"scale-info/std",
	"enumflags2/std",
	"allfeat-primitives/std",
	"parity-scale-codec/std",
	"pallet-midds/std",
	"polkadot-sdk/std",
]
runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
	"pallet-midds/runtime-benchmarks",
]
test = []
