[package]
authors.workspace = true
description = "Shared stuffs for Allfeat runtimes."
edition.workspace = true
name = "shared-runtime"
version.workspace = true

[dependencies]
allfeat-primitives = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
pallet-transaction-payment = { workspace = true }

[features]
default = ["std"]
std = [
	"allfeat-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"pallet-transaction-payment/std",
]
test = []
